--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -9,13 +9,13 @@
 .color-rosado--claro-b
   background-color: #FFF6FA
 
+.tarjeta--rosado-claro
+  background-color: #FDFAFC
+
+
 .eb
   b
-    color: $color-primario
-.color-secundario
-  .eb
-    b
-      color: $color-secundario
+    color: #BF3976
 .card-color
   height: 100%
   display: flex
@@ -218,3 +218,8 @@ a.anexo
 .linea-tiempo-d__item__content.tarjeta.tarjeta--gris,
 .linea-tiempo-d__item__number.tarjeta.tarjeta--gris
   background-color: #def0ff
+
+
+.referencias__item
+  i
+    margin-left: 5px
